  -  Added support for external style information files to override language defaults without modifying language files (BenBE)
  -  The overall_class is now up to the user, and the language-code is _always_ added as a class (milian)
  -  Fixed Economy Mode for GeSHi::get_stylesheet() - now it just makes so much more sense! (milian)
  -  Fixed Economy Mode when COMMENT_REGEXP are used (BenBE)
  -  Improved overall string support:
     * Added support for multichar string delimiters (SF#1932083, BenBE)
     * Fixed problems of unfinished strings and comments producing invalid XHTML (SF#1996353, BenBE)
     * Multichar Quotemarks sometimes had inconsistent behaviour (BenBE)
     * Support for multiple styles of strings depending on the starter (BenBE)
     * Properly handle escapes in strings, i.e. '\\' was not working properly before (milian)
     * Fixed escape char support when an escape char is followed by multi-byte chars (SF#2037598, BenBE)
  -  Improved flexibility in language files (BenBE, milian)
     * Added PARSER_CONTROL for OOLANG method highlighting (SF#1923060, BenBE)
     * Removed explicit escaping of / in Regular Expressions (BenBE)
     * Ignoring empty keyword groups when highlighting (milian)
     * Make language_permissions configurable in language files via ['PARSER_CONTROL']['ENABLE_FLAGS']
       this makes is_a calls unneeded and thus prevents PHP notices in PHP 5.x (milian)
     * Extended support for number formats now covering the most common formats (SF#1923058, BenBE)
     * Lifted a limitation that keywords had to have at least 2 subsequent letters (BenBE)
     * Changed behaviour of PARSER_CONTROL now allowing to provide the full Lookahead and Lookbehind
       expressions used as delimiters inside keywords instead of a simple char group (BenBE)
     * Fixed improper handling of newlines in REGEXPS so this does not produce invalid html anylonger (milian)
  -  Some typos and mistakes in the documentation (BenBE)